# RawPicker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  pyproject.toml  readme_cn.md  readme_en.md  smoke.py  smoke_1000.py
PRD/: RawPicker_Pro_PRD.md
docs/plans/: 2026-06-07-perf-ui-lightbox.md  2026-06-08-perf-light-theme-design.md  2026-06-08-perf-light-theme-plan.md  2026-06-08-preview-lightbox-fixes.md  2026-06-12-lightbox-zoom-pan-design.md
src/: __init__.py  app.py  main.py
src/config/: settings.py
src/core/: __init__.py  cleaner_engine.py  file_ops.py  metadata_reader.py  picker_engine.py  renamer_engine.py  scanner.py
src/models/: orphan_item.py  photo_item.py
src/ui/: __init__.py  clean_tab.py  lightbox.py  main_window.py  map_panel.py  pick_badge.py  pick_tab.py  preview_panel.py  rating_widget.py  rename_tab.py  sidebar.py  thumbnail_grid.py
src/ui/dialogs/: common.py
src/utils/: __init__.py  config_store.py  image_cache.py  thumbnail_loader.py  validators.py
tests/: _fixture.py  conftest.py  smoke.py  smoke_1000.py  test_cleaner_engine.py  test_lightbox.py  test_metadata_reader.py  test_metadata_single_read.py  test_perf_panel.py  test_picker_engine.py  test_renamer_engine.py  test_scale.py  test_scanner.py  test_thumbnail_loader.py
